--- a/views/admin/_sideBar.ejs
+++ b/views/admin/_sideBar.ejs
@@ -18,7 +18,7 @@
            
            <% if (activeLink) { %>
             <ul>
-              <li class="<% activeLink === 'dashboard' ? 'nav-link dropdown-toggle active' : '' %>">
+              <li class="<% activeLink === 'dashboard' ? "nav-link dropdown-toggle active" : '' %>">
                   <a href="/dashboard" class="nav-item nav-link "><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                 </li>
               <li class="<% activeLink === 'add-product' ? 'nav-link dropdown-toggle active' : '' %>">
