--- a/public/assets/css/owl.carousel.css
+++ b/public/assets/css/owl.carousel.css
@@ -47,11 +47,11 @@
   .owl-carousel .owl-dot {
     cursor: pointer;
     cursor: hand;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none; }
+    -webkit-user-select: auto;
+    -khtml-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto; }
   .owl-carousel.owl-loaded {
     display: block; }
   .owl-carousel.owl-loading {
