--- a/views/admin/_show.ejs
+++ b/views/admin/_show.ejs
@@ -2,18 +2,19 @@
 <% for(let i=0;i<products.length;i++){ %>
 <tr>
     <td><%= i+1 %></td>
-    <td><%=products[i].name  %></td>
-    <td><img src="<%=products[i].image[0]  %>" alt="" style="width:100px "></td>
+    <td><img src="<%=products[i].image[0]  %>" alt="" style="width:70px "></td>
+    <td><%=products[i].name.slice(0,10) %></td>
     <td><%=products[i].brand.name  %></td>
-    <td><%=products[i].description  %></td>
+    <td><%=products[i].category.name  %></td>
     <td><%=products[i].price  %></td>
+    <td><%= products[i].stock %></td>
     
     
     <td>
         <a   href="/update-product?id=<%= products[i]._id%>" class="btn border-shadow update">
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
             </a>
-        <a  href="/delete-product/<%= products[i]._id%>"class="btn border-shadow delete">
+        <a  href="#" onclick="confirmDelete('/delete-product/<%= products[i]._id%>')" class="btn border-shadow delete">
             <span class="text-gradient"><i class="fas fa-times"></i></span>
         </a>
         <!-- <a href="" class="btn border-shadow"email-id=<%= products[i]._id %>></a>
