--- a/views/admin/orderData.ejs
+++ b/views/admin/orderData.ejs
@@ -34,7 +34,7 @@
                                         <th scope="col">SI No</th>
                                         <th scope="col">Date</th>
                                         <th scope="col">Order Id</th>
-                                        
+                                        <th scope="col">User Name</th>
                                         <th scope="col">Product Name</th>
                                         <th scope="col">Status</th>
                                         
@@ -49,7 +49,7 @@
                                             <td><%= i+1 %></td>
                                             <td><%= order[i].createdAt.toLocaleDateString() %></td>
                                             <td><%= order[i]._id.toString().slice(-8) %></td>
-                                         
+                                            <td><%= order[i].userId.name %></td>
                                             <td><% (order[i].products).forEach(element => { %><%= element.name %><br><% }) %></td>
                                             <td > <a <% if (order[i].status=="Cancelled") { %>
                                                 style="color:red"
