--- a/views/admin/productData.ejs
+++ b/views/admin/productData.ejs
@@ -32,11 +32,12 @@
                                 <thead>
                                     <tr>
                                         <th scope="col">ID</th>
-                                        <th scope="col">Name</th>
                                         <th scope="col">Image</th>
+                                        <th scope="col">Name</th>
                                         <th scope="col">Brand</th>
-                                        <th scope="col">Description</th>
+                                        <th scope="col">Category</th>
                                         <th scope="col">Price</th>
+                                        <th scope="col">Stock</th>
                                         <th scope="col"></th>
                                     </tr>
                                 </thead>
@@ -90,6 +91,23 @@
     </div>
 
 
+    <script>
+        function confirmDelete(url) {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: 'This action cannot be undone!',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = url;
+                }
+            });
+        }
+    </script>
     
 
     <%- include('_footer') %>
