--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -13,8 +13,8 @@
                 <div class="col-first">
                     <h1>Shopping Cart</h1>
                     <nav class="d-flex align-items-center">
-                        <a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-                        <a href="category.html">Cart</a>
+                        <a href="/">Home<span class="lnr lnr-arrow-right"></span></a>
+                        <a href="/cart">Cart</a>
                     </nav>
                 </div>
             </div>
@@ -176,7 +176,11 @@
                                     <div class="checkout_btn_inner d-flex align-items-center ">
                                         <a  class="primary-btn" href="/loadingPage">Continue Shopping</a>
                                         
+                                       <% if (cart.products[0]) { %>
                                         <a class="primary-btn ml-3" href="/address">Proceed to checkout</a>
+                                        <% } else { %>
+                                         
+                                       <% } %>
                                     </div>
                                 </td>
                                 
