--- a/views/user/invoice.ejs
+++ b/views/user/invoice.ejs
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="invoice-title">
-                    <h2>Invoice</h2><h3 class="pull-right">Order # <%= order._id.toString().slice(-8) %></h3>
+                    <h2>Invoice</h2><img style="margin-left: 25%;" src="/assets/img/logo.png" alt=""><h3 class="pull-right">Order # <%= order._id.toString().slice(-8) %></h3>
                 </div>
                 <hr>
                 <div class="row">
