--- a/views/user/registration.ejs
+++ b/views/user/registration.ejs
@@ -1,75 +1,7 @@
 <%- include('_userheader') %>
 
 	
-<header class="header_area sticky-header">
-    <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light main_box">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="/"><img src="/assets/img/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                             aria-expanded="false">Sneakers</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="/all-product">All Product</a></li>
-                                <li class="nav-item"><a class="nav-link" href="category.html">Adidas</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-product.html">New Balance</a></li>
-                                <li class="nav-item"><a class="nav-link" href="checkout.html">Nike</a></li>
-                               
-                            </ul>
-                        </li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                             aria-expanded="false">Apparel</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Hoodies</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Accessories</a></li>
-                            </ul>
-                        </li>
-                        <!-- <li class="nav-item submenu dropdown active">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                             aria-expanded="false">Pages</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item active"><a class="nav-link" href="/login">Login</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
-                                
-                            </ul>
-                        </li> -->
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-
-                       
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item"><a href="/login" class="loginPage"><span class="ti-user"></span></a></li>
-                        <li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
-                        <li class="nav-item">
-                            <button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="search_input" id="search_input_box">
-        <div class="container">
-            <form class="d-flex justify-content-between">
-                <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-                <button type="submit" class="btn"></button>
-                <span class="lnr lnr-cross" id="close_search" title="Close Search"></span>
-            </form>
-        </div>
-    </div>
-</header>
+<%- include('_headerNavBar') %>
 	
 
 	<!-- Start Banner Area -->
@@ -79,8 +11,8 @@
 				<div class="col-first">
 					<h1>New User Registration</h1>
 					<nav class="d-flex align-items-center">
-						<a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-						<a href="registration.ejs">Registration</a>
+						<a href="/">Home<span class="lnr lnr-arrow-right"></span></a>
+						<a href="/signup">Registration</a>
 					</nav>
 				</div>
 			</div>
@@ -105,7 +37,7 @@
 				<div class="col-lg-12">
 					<div class="login_form_inner">
 						<h3>Log in to enter</h3>
-						<form class="row login_form" action="/signup" method="post" id="contactForm" >
+						<form onsubmit="return validate()" class="row login_form" action="/signup" method="post" id="contactForm" >
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="regName" name="regName" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'">
 							</div>
@@ -121,7 +53,7 @@
 							
 							<div class="col-md-12 form-group">
 								<button type="submit" value="submit" class="primary-btn">Sign Up</button>
-								<a href="#">Forgot Password?</a>
+								
 							</div>
 						</form>
 					</div>
@@ -226,6 +158,35 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="/assets/js/gmaps.min.js"></script>
 	<script src="/assets/js/main.js"></script>
+
+
+	<script>
+		 setTimeout(() => {
+        document.getElementById("msg").style.display='none'
+    },2000);
+
+    function validate(){
+		let name=document.getElementById('regName')
+		let phone=document.getElementById('regPhone')
+        let email=document.getElementById('regEmail')
+        let password=document.getElementById('regPassword')
+		const regexName=/[a-zA-Z0-9]{4}/gm
+		const regexPhone=/[0-9]{10}/gm
+        const regexMail = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]/gm;
+        const regexPassword = /[a-zA-Z0-9]{4}/gm;
+        if((email.value !=''&& regexMail.test(email.value))&&
+		(password.value !=''&& regexPassword.test(password.value))&&
+		(pone.value !=''&& regexPhone.test(phone.value))&&
+		(name.value !=''&& regexName.test(name.value))){
+            return true
+        }else{
+            alert("enter a valid input")
+            return false
+
+        }
+
+   }
+	</script>
 
 
 	<%- include('_userfooter') %>
