--- a/views/user/test.ejs
+++ b/views/user/test.ejs
@@ -13,7 +13,7 @@
 				<div class="col-first">
 					<h1>Shop Category page</h1>
 					<nav class="d-flex align-items-center">
-						<a href="/loadingPage">Home<span class="lnr lnr-arrow-right"></span></a>
+						<a href="/">Home<span class="lnr lnr-arrow-right"></span></a>
 						<a href="#">Category<span class="lnr lnr-arrow-right"></span></a>
 						<a href="/adidas">All Product</a>
 					</nav>
