--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -13,8 +13,8 @@
 				<div class="col-first">
 					<h1>User Profile</h1>
 					<nav class="d-flex align-items-center">
-						<a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-						<a href="category.html">User Profile</a>
+						<a href="/">Home<span class="lnr lnr-arrow-right"></span></a>
+						<a href="/user-profile">User Profile</a>
 					</nav>
 				</div>
 			</div>
